# aprendiendo-imgui-implot

./: .gitignore  CMakeLists.txt
bitacoras/: 001-25-agosto-2025.txt  002-25-agosto-2025.txt  003-25-agosto-2025.txt
src/: main.cpp
